--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 02 - kinematics.ipynb
-Images/
 .ipynb_checkpoints/
-WRITEUP - Project2 Kinematics.ipynb
  __pycache__/*
 __pycache__/
 Untitled.ipynb
+WC_calculation.pyc
+DH_transform_matrix.pyc
+writeup_template.md
+images/Thumbs.db
